--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,13 @@
         <form id="signin">
             <input type="email" id="email" placeholder="Email" required />
             <input
-                type="password"
-                id="password"
-                placeholder="Password"
-                required
+            type="password"
+            id="password"
+            placeholder="Password"
+            required
             />
             <button type="submit">Login</button>
         </form>
-        <script src="./public/popup.js"></script>
+        <script src="./popup.js"></script>
     </body>
 </html>
