diofa i cookie impazzisco

--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,12 @@
     </head>
     <body>
         <form id="signin">
-            <input type="email" id="email" placeholder="Email" required />
+            <input type="email" id="email" placeholder="Email" value="gabriele.gherlone@gmail.com" required />
             <input
             type="password"
             id="password"
             placeholder="Password"
+            value=""
             required
             />
             <button type="submit">Login</button>
