culopalle prende vita!

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         -->
         <div id="app" style="display: none;">
             <h3>Hi <span id="user-email"></span></h3>
-            <button id="unlock-vault">Unlock Vault</button>
+            <!-- <button id="unlock-vault">Unlock Vault</button> -->
         </div>
         <!-- 
         LOGIN SE NON è LOGGATO L'UTENTE
