aggiunto totp e supporto per input complessi

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Vault Login</title>
-        <script src="./popup.bundle.js"></script>
+        <script src="./dist/popup.bundle.js"></script>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
