--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Password" value="" required />
             <button type="submit">Login</button>
+            <p id="signin-info"></p>
         </form>
     </body>
 </html>
