--- a/popup.html
+++ b/popup.html
@@ -22,12 +22,17 @@
         LOGIN SE NON è LOGGATO L'UTENTE
         -->
         <form id="signin" class="container">
+            <!-- modifica al login, ora si deve accedere dall'app generando il token di accesso -->
+            <!-- 
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="Email" required />
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Password" value="" required />
             <button type="submit">Login</button>
-            <p id="signin-info"></p>
+            <p id="signin-info"></p> -->
+            <label for="email">Token di accesso</label>
+            <input type="text" id="token" placeholder="Token di accesso" required />
+            <button type="submit">Accedi</button>
         </form>
     </body>
 </html>
