--- a/popup.html
+++ b/popup.html
@@ -29,10 +29,15 @@
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Password" value="" required />
             <button type="submit">Login</button>
-            <p id="signin-info"></p> -->
+            -->
             <label for="email">Token di accesso</label>
-            <input type="text" id="token" placeholder="Token di accesso" required />
+            <input type="text" id="token" placeholder="..." required />
+            <p>
+                Puoi generarne uno dall'app:<br>
+                Tools > Accesso Rapido > Sezione 2
+            </p>
             <button type="submit">Accedi</button>
+            <p id="signin-info"></p>
         </form>
     </body>
 </html>
