--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,15 @@
         <title>Vault Login</title>
         <script src="./dist/popup.bundle.js"></script>
         <link rel="stylesheet" href="css/main.css">
+        <meta charset="utf-8">
     </head>
     <body>
         <!-- 
         SCHERMATA DI DEFAULT
         -->
         <div id="app" class="container" style="display: none;">
-            <h3>Hi <strong id="user-email"></strong></h3>
-            <p id="vault-info">Vault is ready</p>
+            <h3>Ciao <strong id="user-email"></strong></h3>
+            <p id="vault-info">Il Vault è pronto</p>
             <div class="flex-container">
                 <button id="fullsync-btn" title="Download all data from the server. Useful if local data is corrupt or outdated.">Full Sync</button>
                 <button id="smartsync-btn" title="Download only the latest changes from the server. Fast and optimized.">Smart Sync</button>
