--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,10 @@
         <div id="app" class="container" style="display: none;">
             <h3>Ciao <strong id="user-email"></strong></h3>
             <p id="vault-info">Il Vault è pronto</p>
+            <p>
+                Avvia con: <br>
+                Ctrl + ù | Ctrl + Alt + ù
+            </p>
             <div class="flex-container">
                 <button id="fullsync-btn" title="Download all data from the server. Useful if local data is corrupt or outdated.">Full Sync</button>
                 <button id="smartsync-btn" title="Download only the latest changes from the server. Fast and optimized.">Smart Sync</button>
